# sigmund

./: CMakeLists.txt
cmake/: common.cmake
conf/: sigmund.conf.example
init/: plumgrid-sigmund.conf  plumgrid-sigmund.override
misc/kibana-dashboards/: export.json  minimal.json
pkg/: CMakeLists.txt  build_deb_package  build_plumgrid-sigmund_deb  deb-functions.sh
src/: CMakeLists.txt  sigmund-configure  sigmund.cc  version.cc.in  version.h  version.sh.in
src/conf/: sigmund.conf.example
src/lib/: CMakeLists.txt  configurator.cc  configurator.h  db_interface.cc  db_interface.h  dispatcher.cc  dispatcher.h  es_interface.cc  es_interface.h  freud-data.proto  sync_queue.h  threaded_udp_srv.cc  threaded_udp_srv.h
